--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,7 @@
         ctx.fillStyle="#FFFFFF";
         x = parseInt(x, 10);
         y = parseInt(y, 10);
+        owner = parseInt(owner, 10);
         ctx.fillText(name, x, y + 15);
         ctx.fillText(economy, x - 7, y - 12);
         ctx.fillText(industry, x, y - 12);
@@ -51,6 +52,13 @@
         ships = parseInt(ships,10);
         if(ships > 0){
             ctx.fillText(ships, x, y + 23);
+        }
+        if(owner > 0){
+            ctx.strokeStyle=getPlayerColor(parseInt(owner, 10));
+            ctx.lineWidth=3;
+            ctx.beginPath();
+            ctx.arc(x,y,7,0,2*Math.PI);
+            ctx.stroke();
         }
         ctx.beginPath();
         ctx.arc(x,y,5,0,2*Math.PI);
@@ -75,7 +83,8 @@
             if(map.MAP[i].i.type=="star"){
                 if(map.MAP[i].i.id == destination){
                     console.log("course charted from " + x + ", " + y + " to " + map.MAP[i].i.x + ", " + map.MAP[i].i.y);
-                    ctx.strokeStyle="#FFFFFF";
+                    console.log(getPlayerColor(parseInt(owner, 10)));
+                    ctx.strokeStyle=getPlayerColor(parseInt(owner, 10));
                     ctx.lineWidth=1;
                     ctx.beginPath();
                     ctx.moveTo(x,y);
@@ -83,6 +92,19 @@
                     ctx.stroke();
                 }
             }
+        }
+    }
+
+    function getPlayerColor(player){
+        switch(player) {
+            case 1:
+                return "#8EB9FE"; //blue
+            case 2:
+                return "#B4FE8E"; //green
+            case 3:
+                return "#FEE28E"; //yellow
+            case 4:
+                return "#FE8EE9"; //pink
         }
     }
 </script>
