--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
 </head>
 <body style="background-color:black">
 <br>
-<div id="selectionPanel"></div>
-<canvas id="myCanvas" width="1100" height="650" style="border:1px solid #000000;"></canvas>
+<div id="selectionPanel" style="border:1px solid #BBBBBB; width:100px; height:650px; position: fixed;"></div>
+<canvas id="myCanvas" width="1100" height="650" style="border:1px solid #000000; left: 100px;"></canvas>
 <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
@@ -16,30 +16,36 @@
     var map;
     var clickableArea = 20;
 
+    var selectionPanel = document.getElementById("selectionPanel");
+
 //    var avgWhiteStar =  new Image();
 //    avgWhiteStar.src = "images/averstarwhite.png"
-
-    var selectionPanel = document.getElementById("selectionPanel");
 
     canvas.addEventListener("click", onClick);
     function onClick(event){
         var canvasX = event.x - canvas.offsetLeft + document.body.scrollLeft;
         var canvasY = event.y - canvas.offsetTop + document.body.scrollTop;
         exampleSocket.send("click(" + canvasX +", "+ canvasY +")");
+        var selectionCount = 0;
         for(i=0; i < map.MAP.length; i++){
             if(map.MAP[i].i.x < canvasX + clickableArea && map.MAP[i].i.x > canvasX - clickableArea && map.MAP[i].i.y < canvasY + clickableArea && map.MAP[i].i.y > canvasY - clickableArea){
                 if(map.MAP[i].i.type == "ship"){
+                    selectionCount++;
                     drawShip(map.MAP[i].i.x, map.MAP[i].i.y, map.MAP[i].i.ships, map.MAP[i].i.destination, map.MAP[i].i.owner, true, ctx);
                 } else if(map.MAP[i].i.type == "star"){
+                    selectionCount++;
                     var selection = document.createElement('input');
                     selection.type = "text";
                     selection.value = "star selected = " + map.MAP[i].i.id;
                     selectionPanel.appendChild(selection);
-                } else {
-                    while (selectionPanel.firstChild) {
-                        selectionPanel.removeChild(selectionPanel.firstChild);
-                    }
                 }
+            }
+        }
+        if(selectionCount < 1){
+            console.log("should be removing elements");
+            while (selectionPanel.hasChildNodes()) {
+                console.log("hasChildNodes");
+                selectionPanel.removeChild(selectionPanel.lastChild);
             }
         }
     }
@@ -50,9 +56,7 @@
     };
     exampleSocket.onmessage = function (event) {
         if(event.data.toString().substring(2,5) == "MAP") {
-            console.log("Map received: " + event.data);
             map = JSON.parse(event.data);
-            console.log(map.MAP.length);
             clearMap(canvas, ctx);
             for(var i = 0; i < map.MAP.length; i++){
                 if(map.MAP[i].i.type == "star"){
@@ -66,7 +70,6 @@
     };
 
     function drawStar(x, y, name, science, industry, economy, ships, owner, ctx){
-        console.log(name);
         ctx.fillStyle="#FFFFFF";
         x = parseInt(x, 10);
         y = parseInt(y, 10);
@@ -105,8 +108,6 @@
         for(i=0; i < map.MAP.length; i++){
             if(map.MAP[i].i.type=="star"){
                 if(map.MAP[i].i.id == destination){
-                    console.log("course charted from " + x + ", " + y + " to " + map.MAP[i].i.x + ", " + map.MAP[i].i.y);
-                    console.log(getPlayerColor(parseInt(owner, 10)));
                     ctx.strokeStyle=getPlayerColor(parseInt(owner, 10));
                     if(isSelected){
                         ctx.setLineDash([]);
