--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
 <body style="background-color:black">
 <br>
 <div id="selectionPanel" style="border:1px solid #BBBBBB; width:100px; height:650px; position: fixed;"></div>
-<canvas id="myCanvas" width="1100" height="650" style="border:1px solid #000000; left: 100px;"></canvas>
+<div id="infoPanel" style="position: fixed;"></div>
+<canvas id="myCanvas" width="1100" height="650" style="border:1px solid #000000;"></canvas>
 <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
@@ -26,6 +27,10 @@
         var canvasX = event.x - canvas.offsetLeft + document.body.scrollLeft;
         var canvasY = event.y - canvas.offsetTop + document.body.scrollTop;
         exampleSocket.send("click(" + canvasX +", "+ canvasY +")");
+        console.log("click(" + canvasX +", "+ canvasY +")");
+        while (selectionPanel.hasChildNodes()) {
+            selectionPanel.removeChild(selectionPanel.lastChild);
+        }
         var selectionCount = 0;
         for(i=0; i < map.MAP.length; i++){
             if(map.MAP[i].i.x < canvasX + clickableArea && map.MAP[i].i.x > canvasX - clickableArea && map.MAP[i].i.y < canvasY + clickableArea && map.MAP[i].i.y > canvasY - clickableArea){
@@ -33,18 +38,40 @@
                     selectionCount++;
                     drawShip(map.MAP[i].i.x, map.MAP[i].i.y, map.MAP[i].i.ships, map.MAP[i].i.destination, map.MAP[i].i.owner, true, ctx);
                 } else if(map.MAP[i].i.type == "star"){
+                    console.log("star clicked");
                     selectionCount++;
-                    var selection = document.createElement('input');
-                    selection.type = "text";
-                    selection.value = "star selected = " + map.MAP[i].i.id;
-                    selectionPanel.appendChild(selection);
+                    var selectedStarName = document.createElement('input');
+                    selectedStarName.type = "text";
+                    selectedStarName.value = map.MAP[i].i.id;
+                    var selectedStarIndustry = document.createElement('button');
+                    selectedStarIndustry.type = "button";
+                    var selectedStarIndustryValue = parseInt(map.MAP[i].i.industry, 10);
+                    selectedStarIndustry.innerHTML = selectedStarIndustryValue;
+                    var selectedStarScience = document.createElement('button');
+                    selectedStarScience.type = "button";
+                    selectedStarScience.innerHTML = map.MAP[i].i.science;
+                    var selectedStarEconomy = document.createElement('button');
+                    selectedStarEconomy.type = "button";
+                    selectedStarEconomy.innerHTML = map.MAP[i].i.economy;
+                    var selectedStarShips = document.createElement('button');
+                    selectedStarShips.type = "button";
+                    selectedStarShips.innerHTML = map.MAP[i].i.ships;
+
+                    var selectedStar = document.createElement('div');
+                    selectedStar.appendChild(selectedStarName);
+                    selectedStar.appendChild(selectedStarIndustry);
+                    selectedStar.appendChild(selectedStarScience);
+                    selectedStar.appendChild(selectedStarEconomy);
+                    selectedStar.appendChild(selectedStarShips);
+                    selectionPanel.appendChild(selectedStar);
+                    selectedStarName.setAttribute("style","width:94px");
+
+                    selectedStarIndustry.addEventListener("click", function(){incrementIndustry(selectedStarName.value, selectedStarIndustry, selectedStarIndustryValue)});
                 }
             }
         }
         if(selectionCount < 1){
-            console.log("should be removing elements");
             while (selectionPanel.hasChildNodes()) {
-                console.log("hasChildNodes");
                 selectionPanel.removeChild(selectionPanel.lastChild);
             }
         }
@@ -68,6 +95,29 @@
             }
         }
     };
+
+    function incrementIndustry(starName, selectedStarIndustry, selectedStarIndustryValue){
+        for(i=0; i < map.MAP.length; i++) {
+            if(map.MAP[i].i.id == starName){
+                map.MAP[i].i.industry += 1;
+                selectedStarIndustry.innerHTML = map.MAP[i].i.industry;
+                console.log("increment industry" + starName);
+                var order = {order:[]};
+                order.order.push({
+                    id: starName,
+                    type: "increment", //change research target, transmit ship orders, send player message/credits/tech
+                    ships: "0",
+                    destination: "null",
+                    science: "0",
+                    industry: "1",
+                    economy: "0",
+                    owner: "me"
+                });
+                exampleSocket.send(JSON.stringify(order));
+                break;
+            }
+        }
+    }
 
     function drawStar(x, y, name, science, industry, economy, ships, owner, ctx){
         ctx.fillStyle="#FFFFFF";
